<resources>

    <!-- Common -->

    <string name="app_name">Pay Day Bank</string>
    <string name="unknown">Unknown</string>

    <!-- Common Error -->

    <string name="unknown_error">Unknown Error</string>
    <string name="ssl_handshake_error">SSL Handshake Error</string>
    <string name="internet_error">Internet connection unavailable</string>
    <string name="access_unauthorized_error">Access unauthorized</string>

    <!-- Authentication -->

    <string name="authentication_hint_email">E-mail</string>
    <string name="authentication_hint_password">Password</string>
    <string name="authentication_hint_first_name">First Name</string>
    <string name="authentication_hint_last_name">Last Name</string>
    <string name="authentication_hint_phone">Phone (Example: 1049520521)</string>
    <string name="authentication_hint_dob">Date of Birth</string>
    <string name="authentication_tab_gender_none">\?</string>
    <string name="authentication_tab_gender_male">👦</string>
    <string name="authentication_tab_gender_female">👩</string>
    <string name="authentication_button_sign_in">Sign In</string>
    <string name="authentication_button_sign_up">Sign Up</string>

    <string name="authentication_error_email">Email is incorrect</string>
    <string name="authentication_error_sign_in_password">Password required</string>
    <string name="authentication_error_sign_up_password">The password must be 6 or more alphanumeric characters</string>
    <string name="authentication_error_first_name">First name required</string>
    <string name="authentication_error_last_name">Last name required</string>
    <string name="authentication_error_phone">Phone required</string>
    <string name="authentication_error_dob">Date of Birthday required</string>
    <string name="authentication_error_gender">Please select your gender</string>

    <!-- Transactions Filtered -->

    <string name="transactions_menu_filter">Filter</string>
    <string name="transactions_not_fount_pattern">
        No transactions for the period
        \nFrom %1$s
        \nTo %2$s
    </string>
    <string name="transactions_logout_title">Log Out</string>
    <string name="transactions_logout_message">Are you sure you want to log out of your account?</string>
    <string name="transactions_logout_positive">Logout</string>
    <string name="transactions_logout_cancel">Cancel</string>

    <!-- Transactions Filter -->

    <string name="transactions_filter_title">Filter</string>
    <string name="transactions_filter_date_from">From</string>
    <string name="transactions_filter_date_to">To</string>
    <string name="transactions_filter_date_to_reset">Reset \'To\'</string>
    <string name="transactions_filter_account_active_visible">Active Account</string>
    <string name="transactions_filter_account_inactive_visible">Inactive Account</string>
    <string name="transactions_filter_accounts">Accounts</string>

</resources>